# OpenGL-study-notes

./: README.md
openGL_ Camera/: main.cpp
openGL_ Camera/application/camera/: cameraControl.h
openGL_ Camera/assets/shader/: fragment.glsl  vertex.glsl
openGL_ Camera/glFrameWork/: CMakeLists.txt
openGL_ Camera/wrapper/: checkError.cpp
openGL_ Camera_Geometry/: CMakeLists.txt  main.cpp
openGL_ Camera_Geometry/application/: Application.cpp  Application.h  info.txt
openGL_ Camera_Geometry/application/camera/: gameCameraControl.cpp
openGL_ Camera_Geometry/assets/shader/: fragment.glsl  (+1 more)
openGL_ Camera_Geometry/glFrameWork/: core.h  shader.cpp
openGL_Material_Assimp/: CMakeLists.txt  glad.c  main.cpp
openGL_Material_Assimp/application/: stb_image.cpp
openGL_Material_Assimp/assets/shader/: fragment.glsl  lightshader.glsl  vertex.glsl
openGL_Material_Assimp/glFrameWork/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  core.h  shader.h  texture.h
openGL_Material_Assimp/wrapper/: checkError.h
openGL_Material_moreLight/: main.cpp
openGL_Material_moreLight/glFrameWork/: DirectionalLight.h  PointLight.h  geometry.cpp  geometry.h  shader.h  texture.cpp  texture.h
openGL_Transform/: main.cpp
openGL_Transform/application/: Application.cpp
openGL_Transform/glFrameWork/: core.h  shader.cpp  shader.h  texture.h
openGL_VBO/: CMakeLists.txt  main.cpp
openGL_VBO/wrapper/: CMakeLists.txt
openGL_mipmap/: main.cpp
openGL_mipmap/application/: Application.h  CMakeLists.txt  info.txt
openGL_mipmap/glFrameWork/: core.h  shader.cpp  shader.h  texture.cpp
(+7 files in other folders)
